Issue #3163127 by scott_euser, Gauravvvv, sd9121, djsagar, ranjith_kumar_k_u, AkshayAdhav, _utsavsharma, sarvjeetsingh, komalk, Nitin shrivastava, ameymudras, pradhumanjain2311, boulaffasae, kostyashupenko, bnjmnm, meena.bisht, ambuj_gupta, sonam.chaturvedi, Sakthivel M, Utkarsh_33, KondratievaS, ressa: Autocomplete input text can visibly overflow under magnifier icon
(cherry picked from commit 90f8dd194f5c1f923c8fe7e3d153ac648fa5cf03)

--- a/core/themes/claro/css/components/autocomplete-loading.module.pcss.css
+++ b/core/themes/claro/css/components/autocomplete-loading.module.pcss.css
@@ -28,6 +28,8 @@
 
 .js {
   & .form-autocomplete {
+    margin-inline-end: calc(var(--input-border-size) - 1.5 * var(--input-padding-horizontal));
+    padding-inline-end: calc(var(--input-padding-horizontal) * 2.5 - var(--input-border-size));
     background-image: url(../../images/icons/868686/magnifier.svg);
     background-repeat: no-repeat;
     background-position: 100% 50%;
